kubernetes/k8sFiles/ressources/sample/deployment.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: ws-spring-backend-group1
  name: ws-spring-backend-group1
  namespace: lancrypt
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ws-spring-backend-group1
  template:
    metadata:
      labels:
        name: ws-spring-backend-group1
    spec:
      containers:
      - env:
        - name: APPLICATIONINSIGHTS_CONNECTION_STRING
          valueFrom:
            secretKeyRef:
              key: connectionstring
              name: application-insights-connectionstring-group1
        - name: SPRING_DATASOURCE_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: ws-spring-backend-db-credentials-group1
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: ws-spring-backend-db-credentials-group1
        image: crconpalwswesteurope001.azurecr.io/workshop/group1/ws-spring-backend
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 40
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        name: ws-spring-backend-group1
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 18080
          name: actuator
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health
            port: 18080
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 600m
            memory: 1Gi
          requests:
            cpu: 400m
            memory: 768Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /mnt/secrets-store
          name: secrets-store01-inline
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: lancrypt-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: ws-spring-backend-db-credentials-group1
        name: secrets-store01-inline
