kubernetes/k8sFiles/ressources/sample/service.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/name: ws-spring-backend-group1
    name: ws-spring-backend-group1
  name: ws-spring-backend-group1
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: actuator
    port: 18080
    protocol: TCP
    targetPort: 18080
  selector:
    name: ws-spring-backend-group1
  sessionAffinity: None
  type: ClusterIP
